--- a/zarf/docker/dockerfile
+++ b/zarf/docker/dockerfile
@@ -13,8 +13,8 @@ RUN go build -ldflags "-X main.build=${BUILD_REF}"
 FROM alpine:3.15
 ARG BUILD_DATE
 ARG BUILD_REF
-COPY --from=build_sales-api /service /service
-WORKDIR /service
+COPY --from=build_sales-api /service /service/service
+WORKDIR /service/service
 CMD ["./uservice"]
 
 LABEL org.opencontainers.image.created="${BUILD_DATE}" \
