--- a/zarf/k8s/kind/sales-pod/kind-sales-patch.yaml
+++ b/zarf/k8s/kind/sales-pod/kind-sales-patch.yaml
@@ -1,23 +1,23 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: service-pod
-  namespace: service-system
+  name: sales-pod
+  namespace: sales-system
 spec:
   replicas: 1
   strategy:
     type: Recreate
   selector:
     matchLabels:
-      app: service
+      app: sales
   template:
     metadata:
       labels:
-        app: service
+        app: sales
     spec:
       containers:
-        # service-api container configuration
-        - name: service-api
+        # sales-api container configuration
+        - name: sales-api
           resources:
             limits:
               # changed the limits to half of the default
